test/corpus/nestedInner2.txt
=============================
Nested Inner 2 plain
=============================

Compiled from "Nested.java"
class Nested$Inner2 {
  public volatile java.lang.Integer f1;
  protected transient java.lang.String f2;
  synchronized void call();
}

---------------------------

   (source_file
      (header_info_compile)
      (class_def_plain
        (class_keyword)
        (identifier)
        (class_def_plain_body
          (class_def_plain_body_item
            (field_def
              (modifiers)
              (scoped_type_identifier
                (scoped_type_identifier
                  (type_identifier)
                  (type_identifier))
                (type_identifier))
              (identifier)))
          (class_def_plain_body_item
            (field_def
              (modifiers)
              (scoped_type_identifier
                (scoped_type_identifier
                  (type_identifier)
                  (type_identifier))
                (type_identifier))
              (identifier)))
          (class_def_plain_body_item
            (method_def
              (modifiers)
              (primitive_type)
              (identifier)
              (args))))))
