test/corpus/nestedInner2.verbose.txt
================================================================================
Nested Inner 2 verbose
================================================================================

Classfile /home/kghost/workspace/tree-sitter-javap/test/corpus/Nested$Inner2.class
  Last modified Feb 19, 2022; size 463 bytes
  MD5 checksum f841d910025f8cbec13a245110ea7896
  Compiled from "Nested.java"
class Nested$Inner2
  minor version: 0
  major version: 55
  flags: (0x0020) ACC_SUPER
  this_class: #5                          // Nested$Inner2
  super_class: #6                         // java/lang/Object
  interfaces: 0, fields: 2, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #6.#20         // java/lang/Object."<init>":()V
   #2 = Class              #21            // java/lang/RuntimeException
   #3 = String             #22            // why
   #4 = Methodref          #2.#23         // java/lang/RuntimeException."<init>":(Ljava/lang/String;)V
   #5 = Class              #24            // Nested$Inner2
   #6 = Class              #27            // java/lang/Object
   #7 = Utf8               f1
   #8 = Utf8               Ljava/lang/Integer;
   #9 = Utf8               f2
  #10 = Utf8               Ljava/lang/String;
  #11 = Utf8               <init>
  #12 = Utf8               ()V
  #13 = Utf8               Code
  #14 = Utf8               LineNumberTable
  #15 = Utf8               call
  #16 = Utf8               SourceFile
  #17 = Utf8               Nested.java
  #18 = Utf8               NestHost
  #19 = Class              #28            // Nested
  #20 = NameAndType        #11:#12        // "<init>":()V
  #21 = Utf8               java/lang/RuntimeException
  #22 = Utf8               why
  #23 = NameAndType        #11:#29        // "<init>":(Ljava/lang/String;)V
  #24 = Utf8               Nested$Inner2
  #25 = Utf8               Inner2
  #26 = Utf8               InnerClasses
  #27 = Utf8               java/lang/Object
  #28 = Utf8               Nested
  #29 = Utf8               (Ljava/lang/String;)V
{
  public volatile java.lang.Integer f1;
    descriptor: Ljava/lang/Integer;
    flags: (0x0041) ACC_PUBLIC, ACC_VOLATILE

  protected transient java.lang.String f2;
    descriptor: Ljava/lang/String;
    flags: (0x0084) ACC_PROTECTED, ACC_TRANSIENT

  synchronized void call();
    descriptor: ()V
    flags: (0x0020) ACC_SYNCHRONIZED
    Code:
      stack=3, locals=1, args_size=1
         0: new           #2                  // class java/lang/RuntimeException
         3: dup
         4: ldc           #3                  // String why
         6: invokespecial #4                  // Method java/lang/RuntimeException."<init>":(Ljava/lang/String;)V
         9: athrow
      LineNumberTable:
        line 13: 0
}
SourceFile: "Nested.java"
NestHost: class Nested

--------------------------------------------------------------------------------

(source_file
  (header
    (header_info
      (file_path))
    (header_info_last_mod)
    (header_info_md5
      (md5))
    (header_info_compile
      (file_name)))
  (class_info_def
    (class_keyword)
    (identifier)
    (class_info_item
      (class_info_item_simple
        (number)))
    (class_info_item
      (class_info_item_simple
        (number)))
    (class_info_item
      (flag_def
        (hex_value)
        (flag_value)))
    (class_info_item
      (class_info_item_simple
        (number)
        (comment)))
    (class_info_item
      (class_info_item_simple
        (number)
        (comment)))
    (class_info_item
      (class_info_item_simple
        (number)
        (number)
        (number)
        (number))))
  (constant_pool_def
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_ref
          (ref_const_pool_item
            (hash_number)
            (hash_number))
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_class
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_string
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_ref
          (ref_const_pool_item
            (hash_number)
            (hash_number))
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_class
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_class
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_class
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_name_and_type
          (ref_const_pool_item)
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_name_and_type
          (ref_const_pool_item)
          (ref_const_pool_item)
          (comment))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value))))
    (constant_pool_item
      (number)
      (constant_pool_item_type
        (constant_pool_item_type_utf8
          (value)))))
  (block
    (field_declaration
      (modifiers)
      (scoped_type_identifier
        (scoped_type_identifier
          (type_identifier)
          (type_identifier))
        (type_identifier))
      (identifier))
    (descriptor_def
      (descriptor_value))
    (flag_def
      (hex_value)
      (flag_value)
      (flag_value))
    (field_declaration
      (modifiers)
      (scoped_type_identifier
        (scoped_type_identifier
          (type_identifier)
          (type_identifier))
        (type_identifier))
      (identifier))
    (descriptor_def
      (descriptor_value))
    (flag_def
      (hex_value)
      (flag_value)
      (flag_value))
    (method_declaration
      (modifiers)
      (primitive_type)
      (identifier)
      (args))
    (descriptor_def
      (descriptor_value))
    (flag_def
      (hex_value)
      (flag_value))
    (code_def
      (code_info
        (code_info_stat
          (number))
        (code_info_stat
          (number))
        (code_info_stat
          (number))
        (numered_instruction
          (number)
          (instruction
            (instruction_name)
            (number))
          (comment))
        (numered_instruction
          (number)
          (instruction
            (instruction_name)))
        (numered_instruction
          (number)
          (instruction
            (instruction_name)
            (number))
          (comment))
        (numered_instruction
          (number)
          (instruction
            (instruction_name)
            (number))
          (comment))
        (numered_instruction
          (number)
          (instruction
            (instruction_name))))
      (line_number_table_def
        (numered_line
          (number)
          (number)))))
  (footer
    (source_file_def
      (file_name))
    (nest_host
      (identifier))))
